; ModuleID = '/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/leds/extr_ledtrig-adm5120-switch.c_adm5120_switch_trig_activate.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/leds/extr_ledtrig-adm5120-switch.c_adm5120_switch_trig_activate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.port_state = type { i32 }
%struct.led_classdev = type { %struct.port_state*, i32 }

@port_states = common dso_local global %struct.port_state* null, align 8
@dev_attr_port_state = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.led_classdev*)* @adm5120_switch_trig_activate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adm5120_switch_trig_activate(%struct.led_classdev* %0) #0 {
  %2 = alloca %struct.led_classdev*, align 8
  %3 = alloca %struct.port_state*, align 8
  %4 = alloca i32, align 4
  store %struct.led_classdev* %0, %struct.led_classdev** %2, align 8
  %5 = load %struct.port_state*, %struct.port_state** @port_states, align 8
  store %struct.port_state* %5, %struct.port_state** %3, align 8
  %6 = load %struct.port_state*, %struct.port_state** %3, align 8
  %7 = load %struct.led_classdev*, %struct.led_classdev** %2, align 8
  %8 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %7, i32 0, i32 0
  store %struct.port_state* %6, %struct.port_state** %8, align 8
  %9 = load %struct.led_classdev*, %struct.led_classdev** %2, align 8
  %10 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @device_create_file(i32 %11, i32* @dev_attr_port_state)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %1
  br label %22

16:                                               ; preds = %1
  %17 = load %struct.led_classdev*, %struct.led_classdev** %2, align 8
  %18 = load %struct.port_state*, %struct.port_state** %3, align 8
  %19 = getelementptr inbounds %struct.port_state, %struct.port_state* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @led_set_brightness(%struct.led_classdev* %17, i32 %20)
  br label %25

22:                                               ; preds = %15
  %23 = load %struct.led_classdev*, %struct.led_classdev** %2, align 8
  %24 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %23, i32 0, i32 0
  store %struct.port_state* null, %struct.port_state** %24, align 8
  br label %25

25:                                               ; preds = %22, %16
  ret void
}

declare dso_local i32 @device_create_file(i32, i32*) #1

declare dso_local i32 @led_set_brightness(%struct.led_classdev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
